res 25-04-25